# CoinWarden

./: .gitignore  CMakeLists.txt  README.md
Backend/: Backend.cpp  Backend.h  Backend.pro  CMakeLists.txt  Model.cpp  Model.h  backend.cpp  backend.h  model.cpp  model.h
Backend/Managers/: AccountsManager.cpp  AccountsManager.h  CategoriesManager.cpp  CategoriesManager.h  CurrenciesManager.cpp  CurrenciesManager.h  NetworkManager.h  TransactionsManager.cpp  TransactionsManager.h
Backend/Modules/: AccountsManager.h  CategoriesManager.cpp  CategoriesManager.h  Category.h  CurrenciesManager.cpp  CurrenciesManager.h  Currency.h  Model.cpp  Model.h  NetworkManager.cpp  NetworkManager.h  Transaction.cpp  Transaction.h  TransactionsManager.cpp  TransactionsManager.h  Utils.h  account.h  category.cpp  category.h  currency.cpp  currency.h  pch.h  t.h  transaction.cpp  transaction.h  utils.h
Desktop/: CMakeLists.txt  Desktop.pro  MainWindow.cpp  MainWindow.h  MainWindow.ui  Utils.h  files.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Desktop/CustomFilters/: CustomFiltersForm.cpp
Desktop/Dialog/: MultiSelectDialog.h
Desktop/Files/: files.qrc
Desktop/MultiSelect/: MultiSelectDialog.cpp  MultiSelectDialog.ui
Desktop/Pages/: MultiSelectDialog.cpp  MultiSelectDialog.h  MultiSelectDialog.ui  Utils.h
Desktop/Pages/CustomFilters/: CustomFiltersForm.cpp  CustomFiltersForm.h  CustomFiltersForm.ui
Desktop/Pages/Home/: HomePage.cpp  HomePage.h  HomePage.ui
Desktop/Pages/NewTransaction/: NewTransactionForm.cpp  NewTransactionForm.h  NewTransactionForm.ui
Desktop/Pages/Settings/: SettingsPage.cpp  SettingsPage.h  SettingsPage.ui
Desktop/Pages/Transactions/: MyComboBox.h  TransactionsPage.cpp  TransactionsPage.h  TransactionsPage.ui
Desktop/QCustomPlot/: qcustomplotd2.lib
