cmake_minimum_required(VERSION 3.22)
project(Desktop LANGUAGES CXX)

set(DESKTOP_SOURCES
    main.cpp
        mainwindow.cpp
    Pages/Settings/SettingsPage.cpp
    Pages/Home/HomePage.cpp
    Pages/Transactions/TransactionsPage.cpp
    Pages/NewTransaction/NewTransactionForm.cpp
    Pages/CustomFilters/CustomFiltersForm.cpp
    Dialog/MultiSelectDialog.cpp
)

set(DESKTOP_HEADERS
        mainwindow.h
    Pages/Utils.h
    Pages/Settings/SettingsPage.h
    Pages/Home/HomePage.h
    Pages/Transactions/TransactionsPage.h
    Pages/NewTransaction/NewTransactionForm.h
    Pages/CustomFilters/CustomFiltersForm.h
    Dialog/MultiSelectDialog.h
)

set(DESKTOP_FORMS
        MainWindow.ui
    Pages/Settings/SettingsPage.ui
    Pages/Home/HomePage.ui
    Pages/Transactions/TransactionsPage.ui
    Pages/NewTransaction/NewTransactionForm.ui
    Pages/CustomFilters/CustomFiltersForm.ui
    Dialog/MultiSelectDialog.ui
)

# Enable AUTOMOC and AUTOUIC
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Widgets Sql Network)

set(DESKTOP_RESOURCES
        Files/files.qrc
)

add_executable(Desktop
        ${DESKTOP_SOURCES}
        ${DESKTOP_HEADERS}
        ${DESKTOP_FORMS}
        ${DESKTOP_RESOURCES}
)

target_link_libraries(Desktop PRIVATE
    Qt6::Core
    Qt6::Gui
    Qt6::Widgets
    Qt6::Sql
    Qt6::Network
    Backend
)

# QCustomPlot
target_include_directories(Desktop PRIVATE
    ${CMAKE_SOURCE_DIR}/Backend
    ${CMAKE_SOURCE_DIR}/Backend/Modules
    ${CMAKE_SOURCE_DIR}/Desktop/QCustomPlot
)
target_link_libraries(Desktop PRIVATE
    ${CMAKE_SOURCE_DIR}/Desktop/QCustomPlot/qcustomplotd2.lib
)
